--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "adding-react-to-rails",
+  "name": "netivot",
   "version": "1.0.0",
   "description": "",
   "main": "webpack.config.js",
@@ -35,6 +35,9 @@
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "chart.js": "^2.2.0-rc.2",
+    "jquery-touchswipe": "^1.6.15",
+    "moment": "^2.14.1",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-redux": "^4.4.5",
